tests/conformance/errors/khaali-access.ur
rakho s: lafz | khaali = khaali;
bolo s.length;
